--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movie_app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ho-01.github.io/movie_app_2023/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -37,7 +38,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "homepage": "https://ho-01.github.io/movie_app_2023/"
+    ]
   }
 }
